--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc_driverClassName=oracle.jdbc.OracleDriver
-jdbc_url=jdbc:oracle:thin:@192.168.1.3:1521:YJJ
+jdbc_url=jdbc:oracle:thin:@192.168.1.111:1521:orcl
 jdbc_username=yjj
 jdbc_password=oracle_4U
