--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,12 @@
 		<artifactId>spring-security-ldap</artifactId>
 		<version>3.1.0.RELEASE</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+	</dependency>
   </dependencies>
 
 </project>
