--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,13 @@
 		<artifactId>spring-security-ldap</artifactId>
 		<version>3.1.0.RELEASE</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi</artifactId>
+		<version>3.9</version>
+	</dependency>
+	
+	
 	
 	<dependency>
 		<groupId>junit</groupId>
